feat: use gradle version catalog to use renovate
- renovate will update supported.versions.toml
- generate-manifest.py replaces catalog versions with actual versions during the build

--- a/devpack-for-spring-manifest/snap/snapcraft.yaml
+++ b/devpack-for-spring-manifest/snap/snapcraft.yaml
@@ -29,9 +29,12 @@ parts:
       - git
       - yamllint
       - yq
+      - python3
     override-build: |
-      craftctl default
       yamllint supported.yaml
+      ./generate-manifest.py
+      mv transformed.yaml supported.yaml
+      craftctl default
       craftctl set version="$(yq .version supported.yaml)"
     prime:
       - supported.yaml
