--- a/content-snap-generator/pom.xml
+++ b/content-snap-generator/pom.xml
@@ -38,6 +38,11 @@
             <version>2.2</version>
         </dependency>
         <dependency>
+            <groupId>org.tomlj</groupId>
+            <artifactId>tomlj</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+        <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
             <version>1.8.0</version>
