--- a/.github/workflows/build-content.yaml
+++ b/.github/workflows/build-content.yaml
@@ -18,6 +18,9 @@ jobs:
       steps:
         - uses: actions/checkout@v4
         - uses: actions/setup-java@
+          with:
+              distribution: 'temurin'
+              java-version: '21'
         - run: |
             make prepare
             if [ ${{ github.event.inputs.snap }} -eq all ]; then
@@ -40,7 +43,7 @@ jobs:
           with:
               distribution: 'temurin'
               java-version: '21'
-          run: |
+        - run: |
             make prepare
         - name: Build ${{matrix.snap}}
           id: ${{matrix.snap}}
