--- a/.github/workflows/build-content.yaml
+++ b/.github/workflows/build-content.yaml
@@ -17,7 +17,7 @@ jobs:
       runs-on: [self-hosted, large, jammy, X64]
       steps:
         - uses: actions/checkout@v4
-        - uses: actions/setup-java@
+        - uses: actions/setup-java@v4
           with:
               distribution: 'temurin'
               java-version: '21'
@@ -39,7 +39,7 @@ jobs:
           snap: ${{fromJson(needs.prepare.outputs.matrix)}}
       steps:
         - uses: actions/checkout@v4
-        - uses: actions/setup-java@
+        - uses: actions/setup-java@v4
           with:
               distribution: 'temurin'
               java-version: '21'
