--- a/.github/workflows/build-content.yaml
+++ b/.github/workflows/build-content.yaml
@@ -23,12 +23,13 @@ jobs:
               java-version: '21'
               cache: 'maven'
         - run: |
+            set -ex
             sudo apt-get update && sudo apt-get install -y make maven openjdk-21-jdk-headless
             make prepare
-            if [ ${{ github.event.inputs.snap }} -eq all ]; then
+            if [ ${{ github.event.inputs.snap }} -eq "all" ]; then
               snaps_json = $(yq eval -o=json devpack-for-spring-manifest/supported.yaml | jq ".\"content-snaps\" | keys")
             else
-              snaps_json = $( echo "[ \"${{ github.event.inputs.snap }}\"]"
+              snaps_json = $( echo "[ \"${{ github.event.inputs.snap }}\"]")
             fi
             echo "matrix=$(echo $snaps_json)" >> $GITHUB_OUTPUT
 
