--- a/.github/workflows/build-content.yaml
+++ b/.github/workflows/build-content.yaml
@@ -15,6 +15,8 @@ on:
 jobs:
     prepare:
       runs-on: [self-hosted, large, jammy, X64]
+      outputs:
+        snaps: ${{ steps.gen_snaps.outputs.snaps }}
       steps:
         - uses: actions/checkout@v4
         - uses: actions/setup-java@v4
@@ -22,7 +24,8 @@ jobs:
               distribution: 'temurin'
               java-version: '21'
               cache: 'maven'
-        - run: |
+        - id: gen_snaps
+          run: |
             set -ex
             sudo apt-get update && sudo apt-get install -y make maven openjdk-21-jdk-headless jq
             sudo snap install yq
@@ -32,7 +35,7 @@ jobs:
             else
               snaps_json=$( echo "[ \"${{ github.event.inputs.snap }}\"]")
             fi
-            echo "matrix=$(echo $snaps_json)" >> $GITHUB_OUTPUT
+            echo "snaps=$(echo $snaps_json)" >> "$GITHUB_OUTPUT"
 
 
     build_content:
@@ -40,7 +43,7 @@ jobs:
       runs-on: [self-hosted, large, jammy, X64]
       strategy:
         matrix:
-          snap: ${{fromJson(needs.prepare.outputs.matrix)}}
+          snap: ${{fromJson(needs.prepare.outputs.snaps)}}
       steps:
         - uses: actions/checkout@v4
         - uses: actions/setup-java@v4
