--- a/devpack-for-spring-manifest/supported.yaml
+++ b/devpack-for-spring-manifest/supported.yaml
@@ -1,5 +1,20 @@
 version: 1
 content-snaps:
+  content-for-spring-boot-35:
+    upstream: https://github.com/spring-projects/spring-boot
+    version: spring-boot-35
+    channel: latest/edge
+    mount: /maven-repo
+    oss-eol: 2026-06-30
+    name: content-for-spring-boot-35
+    build-jdk: openjdk-17-jdk-headless
+    summary: Rebuild of Spring® Boot Framework sources v3.5.x
+    description: |
+      Rebuild of Spring® Boot Framework sources v3.5.x
+      Spring is a trademark of Broadcom Inc. and/or its subsidiaries.
+    license: Apache-2.0
+    lts: false
+
   content-for-spring-boot-34:
     upstream: https://github.com/spring-projects/spring-boot
     version: spring-boot-34
@@ -29,6 +44,22 @@ content-snaps:
       Spring is a trademark of Broadcom Inc. and/or its subsidiaries.
     license: Apache-2.0
     lts: false
+
+
+  content-for-spring-framework-70:
+    upstream: https://github.com/spring-projects/spring-framework
+    version: spring-core-70
+    channel: latest/edge
+    mount: /maven-repo
+    oss-eol: n/a
+    name: content-for-spring-framework-70
+    build-jdk: openjdk-17-jdk
+    summary: Rebuild of Spring® Framework sources v7.0.x
+    description: |
+      Rebuild of Spring® Framework sources v7.0.x.
+      Spring is a trademark of Broadcom Inc. and/or its subsidiaries.
+    license: Apache-2.0
+    lts: true
 
   content-for-spring-framework-62:
     upstream: https://github.com/spring-projects/spring-framework
