chore: tag spring-cli release

--- a/devpack-for-spring/snap/snapcraft.yaml
+++ b/devpack-for-spring/snap/snapcraft.yaml
@@ -21,6 +21,7 @@ parts:
   build-cli:
     plugin: nil
     source: https://github.com/canonical/spring-cli
+    source-tag: v0.10.0-c1
     source-type: git
     build-packages:
       - openjdk-17-jdk-headless
