--- a/devpack-for-spring/snap/snapcraft.yaml
+++ b/devpack-for-spring/snap/snapcraft.yaml
@@ -1,7 +1,7 @@
 name: devpack-for-spring
 base: bare
 build-base: core24
-version: '0.10'
+version: '0.11'
 summary: Development tools for Spring® projects
 description: |
   Development tools for Spring® projects.
@@ -21,6 +21,7 @@ parts:
   build-cli:
     plugin: nil
     source: https://github.com/canonical/spring-cli
+    source-tag: v0.10.0-c1
     source-type: git
     build-packages:
       - openjdk-17-jdk-headless
@@ -47,6 +48,11 @@ parts:
       - enable-patchelf
     stage-packages:
       - openjdk-21-jdk-headless
+      - libc6
+      - libgcc-s1
+      - libstdc++6
+      - zlib1g
+      - libnss3
     override-build: |
       craftctl default
       (cd $CRAFT_PART_INSTALL && mkdir -p usr/bin && ln -sf --relative usr/lib/jvm/java-21-openjdk-${CRAFT_ARCH_BUILD_FOR}/bin/java usr/bin/java)
