feat: update install test

--- a/tests/spread/install-content/task.yaml
+++ b/tests/spread/install-content/task.yaml
@@ -2,8 +2,17 @@ summary: check that devpack for spring can install content snaps
 
 execute: |
   set -ex
-  SNAPS=`devpack-for-spring snap list | grep content | awk -F'│' '{ print $3}'`
+  SNAPS=`devpack-for-spring snap list | grep content | awk -F'│' '{ print $3 }'`
   for snap in $SNAPS; do
+    # install snap
     devpack-for-spring snap install $snap
+    devpack-for-spring snap list | grep $snap | grep '✓'
+    # regenerate configuration
+    devpack-for-spring snap setup-gradle
+    devpack-for-spring snap setup-maven
+    # remove snap
     devpack-for-spring snap remove $snap
+    # regenerate configuration
+    devpack-for-spring snap setup-gradle
+    devpack-for-spring snap setup-maven
   done
