fix: specify help option in smoke test

--- a/tests/spread/smoke/task.yaml
+++ b/tests/spread/smoke/task.yaml
@@ -2,4 +2,4 @@ summary: check that devpack for spring works when installed
 
 execute: |
   set -ex
-  devpack-for-spring | grep Devpack
+  devpack-for-spring --help | grep Devpack
