fix: only install devpack and manifest

--- a/spread.yaml
+++ b/spread.yaml
@@ -4,6 +4,8 @@ backends:
   lxd:
     systems:
       - ubuntu-24.04
+      - ubuntu-22.04
+      - ubuntu-20.04
 
 path: /home/test
 
@@ -12,4 +14,10 @@ suites:
     summary: integration tests
 
 prepare: |
-  find . -name *.snap -exec snap install --dangerous --classic {} \;
+  set -ex
+  # install local devpack
+  find devpack-for-spring -name *.snap -exec snap install --dangerous --classic {} \;
+  # check that it pulled manifest from the snap store
+  snap info devpack-for-spring-manifest | grep "installed:"
+  # install local manifest
+  find devpack-for-spring-manifest -name *.snap -exec snap install --dangerous --classic {} \;
