--- a/.github/workflows/spread.yaml
+++ b/.github/workflows/spread.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   snap-build:
-    runs-on: ubuntu-22.04
+    runs-on: [self-hosted, large, jammy, X64]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -38,7 +38,7 @@ jobs:
           path: ${{ steps.devpack-for-spring-manifest.outputs.snap }}
 
   snap-tests:
-    runs-on: [self-hosted, spread-installed]
+    runs-on: [self-hosted, large, jammy, X64]
     needs: [snap-build]
 
     steps:
@@ -46,7 +46,7 @@ jobs:
         run: |
           rm -rf "${{ github.workspace }}"
           mkdir "${{ github.workspace }}"
-      - name: Checkout rockcraft
+      - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
@@ -63,8 +63,24 @@ jobs:
           name: devpack-for-spring
           path: devpack-for-spring
 
+      - uses: actions/checkout@v4
+        with:
+          repository: snapcore/spread
+          path: _spread
+
+      - uses: actions/setup-go@v3
+        with:
+          go-version: '>=1.17.0'
+
+      - name: Install LXD
+        uses: canonical/setup-lxd@v0.1.1
+        with:
+            channel: 5.21/stable
+
       - name: Run spread
-        run: spread
+        run: |
+          (cd _spread/cmd/spread && go build)
+          _spread/cmd/spread/spread
 
       - name: Discard spread workers
         if: always()
